# cpp-console-game

./: .main.cpp.un~  CMakeLists.txt  README.md  a.out  game.cpp  game_object.cc  game_object.h  gamelin.cpp  info.txt  main.cpp  renderer.cc
assets/: alara.txt  ataberk.txt  box.txt  selin.txt  yuksel.txt
engine/: logger.cpp  logger.h
engine/core/: .game_object.cpp.un~  .game_object.h.un~  animation.cpp  animation.h  collider.cpp  collider.h  game_object.cpp  game_object.h  game_object.h~  position.cpp  position.h  rect.cpp  rect.h  rigid_body.cpp  rigid_body.h  transform.cpp  transform.h
engine/scene/: camera.cpp  camera.h  obj_converter.cpp  obj_converter.h  renderer.cpp  renderer.h
example/: game.cc
src/: camera.h  collider.h  game_object.cc  game_object.h  position.cc  rect.cc  rect.h  renderer.cc  renderer.h  transform.cc
src/core/: collider.cc  collider.h  game_object.cc  game_object.h  position.h  transform.h
src/scene/: camera.h  renderer.cc  renderer.h
